--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sweet.js macros for fantasy-land structures",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/quarterto/fantasy-dessert",
   "devDependencies": {
     "expect.js": "^0.3.1",
+    "fantasy-identities": "0.0.1",
     "mocha": "^2.2.1",
     "sweet.js": "^0.7.4"
   }
